[package]
name = "txn-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = { version = "0.3.6", default-features = false }
clap = { version = "4.5.51", default-features = false, features = ["derive", "help", "std"] }
csv-async = { version = "1.3.1", default-features = false, features = ["tokio", "with_serde"] }
futures-util = { version = "0.3.31", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = ["fs", "io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
indoc = { version = "2.0.7", default-features = false }
rstest = { version = "0.26.1", default-features = false }
